# faker-to-snowflake

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_quality.yml  update_lambda.yml
src/aws_formation/: readme.md
src/faker_to_snowflake/: .dockerignore  Dockerfile  SecretsManager.py  app.py  config.py  fake_data_to_snowflake.py  logging_config.py  readme.md  requirements.txt  snowflake_loader.py  snowpipe_loader.py  sql_api_generate_jwt.py
src/faker_to_snowflake_project/: SecretsManager.py  app.py  config.py  fake_data_to_snowflake.py  main.py
src/snowflake_formation/: README.md  snowflake_build.py  snowflake_formation.yml
