[project]
name = "faker-to-snowflake-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jeff skoldberg", email = "jeff@gmdata.co"},
]
dependencies = [
    "faker>=25.5.0",
    "snowflake-connector-python[pandas]>=3.10.1",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.119",
    "titan @ git+https://github.com/teej/titan.git",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
]
requires-python = "<3.12,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
]
